--- a/SRC/CSS/style.css
+++ b/SRC/CSS/style.css
@@ -57,6 +57,19 @@ input[type="number"] {
   -moz-appearance: textfield;
 }
 
+#search-button {
+  all: unset;
+  cursor: pointer;
+  transition: 0.1s;
+  padding: 0.33rem 0.52rem;
+  border-radius: 0.3rem;
+  border: 0.2rem solid var(--primary-color);
+}
+
+#search-button:hover {
+  border: 0.2rem solid var(--white-color);
+}
+
 /* Conteúdo principal */
 main {
   height: 100vh;
