--- a/SRC/CSS/style.css
+++ b/SRC/CSS/style.css
@@ -80,3 +80,31 @@ main {
   text-align: center;
   padding-top: 3.12rem;
 }
+
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100dvh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: var(--primary-color);
+}
+
+.modal-background {
+  background-color: var(--bg-color);
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  opacity: 0.4;
+}
+
+.modal-container {
+  z-index: 1;
+  background-color: var(--white-color);
+  padding: 1.2rem 3.12rem;
+  border-radius: 0.3rem;
+}
+
