desenvolvimento do rodapé do app e ajustes de arquivos javascript

--- a/SRC/CSS/style.css
+++ b/SRC/CSS/style.css
@@ -154,3 +154,14 @@ main {
   background-color: var(--primary-color);
   color: var(--white-color);
 }
+
+/* Rodapé */
+footer {
+  background-color: var(--primary-color);
+  color: var(--white-color);
+  padding: 0.82rem 0;
+}
+
+footer p {
+  text-align: center;
+}
