mudança de layout no menu de pesquisano arquivo media-480px.css

--- a/SRC/CSS/media-480px.css
+++ b/SRC/CSS/media-480px.css
@@ -4,6 +4,16 @@
   }
 
   /* menu de pesquisa */
+  header {
+    flex-flow: column;
+    align-items: stretch;
+    gap: 2.5rem;
+  }
+
+  #logo-name {
+    align-self: center;
+  }
+
   .search-container {
     flex-flow: column;
   }
